--- a/media.html
+++ b/media.html
@@ -1,1 +1,140 @@
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Media • Anson Zhou</title>
+  <meta name="description" content="Media appearances by Anson Zhou" />
+  <style>
+    :root{
+      --bg:#ffffff;
+      --text:#0f172a;
+      --muted:#475569;
+      --accent:#0b3d91;
+      --card:#ffffff;
+      --border:#e2e8f0;
+      --shadow:0 8px 30px rgba(2,8,23,.06);
+      --radius:18px;
+      --maxw:960px;
+    }
+    @media (prefers-color-scheme: dark){
+      :root{
+        --bg:#0b1220;
+        --text:#e5e7eb;
+        --muted:#94a3b8;
+        --accent:#60a5fa;
+        --card:#0f1a2b;
+        --border:#1e293b;
+      }
+    }
+    html,body{margin:0;padding:0;background:var(--bg);color:var(--text);font-family:system-ui,-apple-system,Segoe UI,Roboto,Inter,Arial,sans-serif;line-height:1.6;}
+    a{color:var(--accent);text-decoration:none}
+    a:hover{text-decoration:underline}
+    .wrap{max-width:var(--maxw);margin:0 auto;padding:24px;}
+    header{display:flex;align-items:center;justify-content:space-between;gap:16px;padding:18px 0;}
+    header > div:first-child{font-weight:800;font-size:18px}
+    nav a{margin-left:16px;font-weight:600}
+    .content-card{background:var(--card);border:1px solid var(--border);box-shadow:var(--shadow);border-radius:var(--radius);padding:28px;}
+    h1{margin:0 0 6px 0;font-size:28px;letter-spacing:-0.01em}
+    .subtitle{color:var(--muted);margin-top:6px}
+    .podcast-section{margin:32px 0;}
+    .section-title{font-weight:700;font-size:18px;margin:24px 0 16px 0;color:var(--text)}
+    .podcast-grid{display:grid;grid-template-columns:repeat(auto-fit, minmax(280px, 1fr));gap:20px;margin-bottom:24px}
+    .podcast-card{background:var(--card);border:1px solid var(--border);border-radius:14px;padding:20px;transition:transform .06s ease,box-shadow .06s ease}
+    .podcast-card:hover{transform:translateY(-2px);box-shadow:0 8px 20px rgba(0,0,0,.12)}
+    .podcast-icon{width:120px;height:120px;background:linear-gradient(135deg, var(--accent), #0f6db6);border-radius:24px;margin-bottom:16px;display:flex;align-items:center;justify-content:center;font-size:48px;color:white;font-weight:700}
+    .podcast-icon.pear{background:linear-gradient(135deg, #10b981, #059669)}
+    .podcast-name{font-size:18px;font-weight:650;margin:0 0 8px 0;color:var(--text)}
+    .podcast-desc{font-size:14px;color:var(--muted);margin-bottom:16px;line-height:1.5}
+    .link-row{display:flex;gap:12px;align-items:center;flex-wrap:wrap}
+    .link-icon{width:40px;height:40px;border-radius:8px;background:rgba(11,61,145,.08);border:1px solid var(--border);display:flex;align-items:center;justify-content:center;color:var(--accent);font-size:18px;transition:all .1s}
+    .link-icon:hover{background:rgba(11,61,145,.15);border-color:var(--accent)}
+    .link-label{font-size:12px;color:var(--muted);margin-top:4px;text-align:center}
+    footer{margin:36px 0;color:var(--muted);font-size:14px;text-align:center}
+    @media (max-width:720px){
+      nav{display:none}
+      .podcast-grid{grid-template-columns:1fr}
+    }
+  </style>
+</head>
+<body>
+  <div class="wrap">
+    <!-- HEADER with nav -->
+    <header>
+      <div>Anson Zhou</div>
+      <nav>
+        <a href="/">Home</a>
+        <a href="/experiences.html">Experience</a>
+        <a href="/research.html">Research</a>
+        <a href="/publications.html">Publications</a>        
+        <a href="/media.html">Media</a>
+      </nav>
+    </header>
 
+    <!-- MAIN CONTENT CARD -->
+    <main class="content-card">
+      <h1>Media</h1>
+      <p class="subtitle">Podcast appearances and other media coverage.</p>
+      
+      <!-- PODCASTS SECTION -->
+      <div class="podcast-section">
+        <h2 class="section-title">Podcasts</h2>
+        
+        <div class="podcast-grid">
+          <!-- Imagine a World -->
+          <div class="podcast-card">
+            <div class="podcast-icon">🌍</div>
+            <h3 class="podcast-name">Imagine a World</h3>
+            <p class="podcast-desc">Add podcast description here</p>
+            <div class="link-row">
+              <div style="display:flex;flex-direction:column;align-items:center;">
+                <a href="SPOTIFY_LINK" target="_blank" rel="noopener" class="link-icon">🎵</a>
+                <div class="link-label">Spotify</div>
+              </div>
+              <div style="display:flex;flex-direction:column;align-items:center;">
+                <a href="APPLE_PODCASTS_LINK" target="_blank" rel="noopener" class="link-icon">🎧</a>
+                <div class="link-label">Apple</div>
+              </div>
+              <div style="display:flex;flex-direction:column;align-items:center;">
+                <a href="ARTICLE_LINK" target="_blank" rel="noopener" class="link-icon">📝</a>
+                <div class="link-label">Article</div>
+              </div>
+            </div>
+          </div>
+
+          <!-- Pear Healthcare Playbook -->
+          <div class="podcast-card">
+            <div class="podcast-icon pear">🏥</div>
+            <h3 class="podcast-name">Pear Healthcare Playbook</h3>
+            <p class="podcast-desc">Add podcast description here</p>
+            <div class="link-row">
+              <div style="display:flex;flex-direction:column;align-items:center;">
+                <a href="SPOTIFY_LINK" target="_blank" rel="noopener" class="link-icon">🎵</a>
+                <div class="link-label">Spotify</div>
+              </div>
+              <div style="display:flex;flex-direction:column;align-items:center;">
+                <a href="APPLE_PODCASTS_LINK" target="_blank" rel="noopener" class="link-icon">🎧</a>
+                <div class="link-label">Apple</div>
+              </div>
+              <div style="display:flex;flex-direction:column;align-items:center;">
+                <a href="ARTICLE_LINK" target="_blank" rel="noopener" class="link-icon">📝</a>
+                <div class="link-label">Article</div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
+
+    <!-- FOOTER -->
+    <footer>
+      © <span id="y"></span> Anson Zhou ·
+      <a href="https://anson-zhou.github.io" target="_blank" rel="noopener">anson-zhou.github.io</a>
+    </footer>
+  </div>
+
+  <script>
+    document.getElementById('y').textContent = new Date().getFullYear();
+  </script>
+</body>
+</html>
