--- a/media.html
+++ b/media.html
@@ -42,8 +42,8 @@
     .podcast-grid{display:grid;grid-template-columns:repeat(auto-fit, minmax(280px, 1fr));gap:20px;margin-bottom:24px}
     .podcast-card{background:var(--card);border:1px solid var(--border);border-radius:14px;padding:20px;transition:transform .06s ease,box-shadow .06s ease;display:flex;flex-direction:column;align-items:center;text-align:center}
     .podcast-card:hover{transform:translateY(-2px);box-shadow:0 8px 20px rgba(0,0,0,.12)}
-    .podcast-icon{width:120px;height:120px;background:linear-gradient(135deg, var(--accent), #0f6db6);border-radius:24px;margin-bottom:16px;display:flex;align-items:center;justify-content:center;font-size:48px;color:white;font-weight:700}
-    .podcast-icon.pear{background:linear-gradient(135deg, #10b981, #059669)}
+    .podcast-icon{width:120px;height:120px;border-radius:24px;margin-bottom:16px;display:flex;align-items:center;justify-content:center;overflow:hidden}
+    .podcast-icon img{width:100%;height:100%;object-fit:cover}
     .podcast-name{font-size:18px;font-weight:650;margin:0 0 8px 0;color:var(--text)}
     .podcast-desc{font-size:14px;color:var(--muted);margin-bottom:16px;line-height:1.5}
     .link-row{display:flex;gap:12px;align-items:center;flex-wrap:wrap;justify-content:center}
@@ -74,7 +74,7 @@
     <!-- MAIN CONTENT CARD -->
     <main class="content-card">
       <h1>Media</h1>
-      <p class="subtitle">Podcast appearances and other media.</p>
+      <p class="subtitle">Podcast appearances and other media coverage.</p>
       
       <!-- PODCASTS SECTION -->
       <div class="podcast-section">
@@ -83,9 +83,11 @@
         <div class="podcast-grid">
           <!-- Imagine a World -->
           <div class="podcast-card">
-            <div class="podcast-icon">🌍</div>
+            <div class="podcast-icon">
+              <img src="images/iaw_square.jpeg" alt="Imagine a World">
+            </div>
             <h3 class="podcast-name">Imagine a World</h3>
-            <p class="podcast-desc">Knight-Hennessy Scholars talk about the world they imagine and what they are doing to bring it to life.</p>
+            <p class="podcast-desc">Conversations exploring the world's most pressing challenges and opportunities.</p>
             <div class="link-row">
               <div style="display:flex;flex-direction:column;align-items:center;">
                 <a href="https://open.spotify.com/show/7iCSHGnoutNsXlvtIuM6OO" target="_blank" rel="noopener" class="link-icon">🎵</a>
@@ -104,9 +106,9 @@
 
           <!-- Pear Healthcare Playbook -->
           <div class="podcast-card">
-            <div class="podcast-icon pear">🍐</div>
+            <div class="podcast-icon pear">🏥</div>
             <h3 class="podcast-name">Pear Healthcare Playbook</h3>
-            <p class="podcast-desc">Insights and stories from trailblazing healthcare leaders on how to build from 0 to 1.</p>
+            <p class="podcast-desc">Insights and stories from healthcare innovation and digital health.</p>
             <div class="link-row">
               <div style="display:flex;flex-direction:column;align-items:center;">
                 <a href="https://open.spotify.com/show/2kKsYzKLmdEBejkqn8ruIl" target="_blank" rel="noopener" class="link-icon">🎵</a>
