Update subtitle for media section

--- a/media.html
+++ b/media.html
@@ -74,7 +74,7 @@
     <!-- MAIN CONTENT CARD -->
     <main class="content-card">
       <h1>Media</h1>
-      <p class="subtitle">Podcast appearances and other media coverage.</p>
+      <p class="subtitle">Podcasts I co-host and other media.</p>
       
       <!-- PODCASTS SECTION -->
       <div class="podcast-section">
