Replace podcast icon with an image for healthcare playbook

--- a/media.html
+++ b/media.html
@@ -106,7 +106,9 @@
 
           <!-- Pear Healthcare Playbook -->
           <div class="podcast-card">
-            <div class="podcast-icon pear">🏥</div>
+            <div class="podcast-icon">
+              <img src="images/php_square.jpeg" alt="Pear Healthcare Playbook">
+            </div>
             <h3 class="podcast-name">Pear Healthcare Playbook</h3>
             <p class="podcast-desc">Insights and stories from healthcare innovation and digital health.</p>
             <div class="link-row">
