Update podcast image from jpeg to png format

--- a/media.html
+++ b/media.html
@@ -107,7 +107,7 @@
           <!-- Pear Healthcare Playbook -->
           <div class="podcast-card">
             <div class="podcast-icon">
-              <img src="images/php_square.jpeg" alt="Pear Healthcare Playbook">
+              <img src="images/php_square.png" alt="Pear Healthcare Playbook">
             </div>
             <h3 class="podcast-name">Pear Healthcare Playbook</h3>
             <p class="podcast-desc">Insights and stories from healthcare innovation and digital health.</p>
