--- a/media.html
+++ b/media.html
@@ -87,7 +87,7 @@
               <img src="images/iaw_square.jpeg" alt="Imagine a World">
             </div>
             <h3 class="podcast-name">Imagine a World</h3>
-            <p class="podcast-desc">Conversations exploring the world's most pressing challenges and opportunities.</p>
+            <p class="podcast-desc">Conversations with Knight-Hennessy Scholars on the world the imagine and what they are doing to get there.</p>
             <div class="link-row">
               <div style="display:flex;flex-direction:column;align-items:center;">
                 <a href="https://open.spotify.com/show/7iCSHGnoutNsXlvtIuM6OO" target="_blank" rel="noopener" class="link-icon">🎵</a>
@@ -110,7 +110,7 @@
               <img src="images/php_square.png" alt="Pear Healthcare Playbook">
             </div>
             <h3 class="podcast-name">Pear Healthcare Playbook</h3>
-            <p class="podcast-desc">Insights and stories from healthcare innovation and digital health.</p>
+            <p class="podcast-desc">Insights from trailblazing healthcare leaders on how to build from 0 to 1.</p>
             <div class="link-row">
               <div style="display:flex;flex-direction:column;align-items:center;">
                 <a href="https://open.spotify.com/show/2kKsYzKLmdEBejkqn8ruIl" target="_blank" rel="noopener" class="link-icon">🎵</a>
