Correct podcast title and alt text capitalization

--- a/media.html
+++ b/media.html
@@ -84,9 +84,9 @@
           <!-- Imagine a World -->
           <div class="podcast-card">
             <div class="podcast-icon">
-              <img src="images/iaw_square.jpeg" alt="Imagine a World">
+              <img src="images/iaw_square.jpeg" alt="Imagine A World">
             </div>
-            <h3 class="podcast-name">Imagine a World</h3>
+            <h3 class="podcast-name">Imagine A World</h3>
             <p class="podcast-desc">Conversations with Knight-Hennessy Scholars on the world the imagine and what they are doing to get there.</p>
             <div class="link-row">
               <div style="display:flex;flex-direction:column;align-items:center;">
