Correct podcast title casing in media.html

--- a/media.html
+++ b/media.html
@@ -81,7 +81,7 @@
         <h2 class="section-title">Podcasts</h2>
         
         <div class="podcast-grid">
-          <!-- Imagine a World -->
+          <!-- Imagine A World -->
           <div class="podcast-card">
             <div class="podcast-icon">
               <img src="images/iaw_square.jpeg" alt="Imagine A World">
