--- a/publications.html
+++ b/publications.html
@@ -76,7 +76,7 @@
       <div>Anson Zhou</div>
       <nav>
         <a href="/">Home</a>
-        <a href="/experiences.html">Experience</a>
+        <a href="/experience.html">Experience</a>
         <a href="/research.html">Research</a>
         <a href="/publications.html">Publications</a>        
         <a href="/media.html">Media</a>
