Update experience details and roles in experience.html

--- a/experience.html
+++ b/experience.html
@@ -82,10 +82,10 @@
             <img src="images/stanford-med-logo.png" alt="Stanford School of Medicine">
           </div>
           <div class="exp-content">
-            <h3 class="exp-org">Stanford University School of Medicine</h3>
+            <h3 class="exp-org">Stanford School of Medicine</h3>
             <div class="exp-role">MD Candidate</div>
-            <div class="exp-period">2024 – Present</div>
-            <div class="exp-details">Physician-Scientist Training Program, Concentrations: Informatics & Data-driven Medicine, Surgery</div>
+            <div class="exp-period">2021 – Present</div>
+            <div class="exp-details">Knight-Hennessy Scholar</div>
           </div>
         </div>
 
@@ -94,9 +94,10 @@
             <img src="images/stanford-gsb-logo.png" alt="Stanford Graduate School of Business">
           </div>
           <div class="exp-content">
-            <h3 class="exp-org">Stanford University Graduate School of Business</h3>
+            <h3 class="exp-org">Stanford Graduate School of Business</h3>
             <div class="exp-role">MBA Candidate</div>
-            <div class="exp-details">Deferred Enrollment Program</div>
+            <div class="exp-period">Deferred Enrollment</div>
+            <div class="exp-details">Knight-Hennessy Scholar</div>
           </div>
         </div>
 
@@ -108,7 +109,7 @@
             <h3 class="exp-org">Johns Hopkins University</h3>
             <div class="exp-role">BS, Biomedical Engineering</div>
             <div class="exp-period">2015 – 2019</div>
-            <div class="exp-details">General Honors & Departmental Honors in Applied Mathematics and Statistics</div>
+            <div class="exp-details">Hodson Trust Scholar · Provost's Undergraduate Research Award</div>
           </div>
         </div>
       </section>
@@ -123,8 +124,8 @@
           </div>
           <div class="exp-content">
             <h3 class="exp-org">Microsoft Research</h3>
-            <div class="exp-role">Research Intern, Health Futures</div>
-            <div class="exp-period">2025</div>
+            <div class="exp-role">Strategy Lead, Health Futures</div>
+            <div class="exp-period">2023</div>
           </div>
         </div>
 
@@ -134,8 +135,8 @@
           </div>
           <div class="exp-content">
             <h3 class="exp-org">Schrödinger</h3>
-            <div class="exp-role">Pipeline Strategist</div>
-            <div class="exp-period">2023</div>
+            <div class="exp-role">Pipeline Strategy Intern</div>
+            <div class="exp-period">2022</div>
           </div>
         </div>
 
@@ -145,8 +146,8 @@
           </div>
           <div class="exp-content">
             <h3 class="exp-org">Invive</h3>
-            <div class="exp-role">Market Intelligence Intern</div>
-            <div class="exp-period">2023</div>
+            <div class="exp-role">Strategy Consultant</div>
+            <div class="exp-period">2020 – 2021</div>
           </div>
         </div>
       </section>
@@ -161,8 +162,8 @@
           </div>
           <div class="exp-content">
             <h3 class="exp-org">Pear VC</h3>
-            <div class="exp-role">Venture Fellow, Healthcare + Biotech</div>
-            <div class="exp-period">2025 – Present</div>
+            <div class="exp-role">Venture Fellow, Health + Bio</div>
+            <div class="exp-period">2024 – Present</div>
           </div>
         </div>
 
@@ -173,7 +174,7 @@
           <div class="exp-content">
             <h3 class="exp-org">Bain & Company</h3>
             <div class="exp-role">Associate Consultant, Private Equity</div>
-            <div class="exp-period">2023 – 2024</div>
+            <div class="exp-period">2019 – 2021</div>
           </div>
         </div>
 
@@ -184,7 +185,7 @@
           <div class="exp-content">
             <h3 class="exp-org">Arkitekt Ventures</h3>
             <div class="exp-role">Venture Fellow</div>
-            <div class="exp-period">2023 – 2024</div>
+            <div class="exp-period">2021 – 2022</div>
           </div>
         </div>
 
@@ -194,8 +195,8 @@
           </div>
           <div class="exp-content">
             <h3 class="exp-org">Johns Hopkins Technology Ventures</h3>
-            <div class="exp-role">Commercialization Fellow</div>
-            <div class="exp-period">2020 – 2023</div>
+            <div class="exp-role">Business Development Intern</div>
+            <div class="exp-period">2018 – 2019</div>
           </div>
         </div>
 
@@ -205,11 +206,16 @@
           </div>
           <div class="exp-content">
             <h3 class="exp-org">Health Advances</h3>
-            <div class="exp-role">Analyst Intern</div>
-            <div class="exp-period">2022</div>
+            <div class="exp-role">Strategy Consultant</div>
+            <div class="exp-period">2018</div>
           </div>
         </div>
       </section>
+
+      <!-- RESEARCH LINK -->
+      <div style="margin-top:32px;padding-top:24px;border-top:2px solid var(--border);color:var(--muted)">
+        See research experiences <a href="https://anson-zhou.github.io/research.html">here</a>
+      </div>
     </main>
 
     <footer>
